--- a/public/views/index.html
+++ b/public/views/index.html
@@ -62,8 +62,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: 2.5rem;
-      font-weight: bold;
+      font-size: 2rem;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
       pointer-events: none; /* Para não interferir em cliques */
     }
@@ -108,8 +107,13 @@
 
 <div class="hero">
   <img src="../img/img-principal.jpg" alt="Imagem principal" />
-  <div class="hero-text">Bem-vindo ao Grupo EletroGe</div>
-  <button>Saiba Mais</button>
+  <div class="hero-text">
+    <h1>
+      Conheça o Grupo EletroGe</div>
+  </h1>
+  <a href="saiba-mais.html">
+    <button>Saiba Mais</button>
+  </a>
 </div>
 
 <section class="features">
@@ -140,7 +144,7 @@
 </section>
 
 <section class="valores">
-  <h1>Valores da EletroGe</h1>
+  <h2>Valores da EletroGe</h2>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in
     ligula nec eros convallis dapibus. Nullam sodales facilisis orci, at
@@ -151,10 +155,12 @@
   </p>
 </section>
 <section class="obras-andamento">
-  <h1>Obras em Andamento</h1>
+  <h2>Obras em Andamento</h2>
   <p>Acompanhe nossos projetos em execução e veja como estamos levando energia de qualidade a mais clientes todos os dias.</p>
-  <button class="botao-andamento">Ver Projetos</button>
-</section>
+  <a href="obras-model.html">
+    <button class="botao-andamento">Ver Projetos</button>
+  </a>
+  </section>
 
 
 <footer>
