--- a/public/views/obras-model.html
+++ b/public/views/obras-model.html
@@ -11,48 +11,48 @@
   />
 </head>
 <body>
-<header>
-  <a href="index.html">
-    <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
-  </a>
-  <nav>
-    <a href="index.html"><i class="fas fa-home"></i> Início</a>
-    <a href="servicos-eletroge.html"><i class="fas fa-tools"></i> Serviços</a>
-    <a href="#"><i class="fas fa-envelope"></i> Contato</a>
-  </nav>
-</header>
-<section class="quadros-wrapper">
-  <h1>Conheça as Nossas Principais Obras</h1>
-  <hr class="stardart-line">
-  <!-- Radio Button para filtro de obras concluidas ou não-->
-  <!--Implementar filtro no back-end  -->
-  <div class="filtro-quadros">
-    <div>
-        <label>
-          <input type="radio" name="filtro-obra" checked=""/>
-          <span class="radio-label">Geral</span>
-        </label>
-      <label>
-        <input type="radio" name="filtro-obra" />
-        <span class="radio-label">Em andamento</span>
-      </label>
-      <label>
-        <input type="radio" name="filtro-obra" />
-        <span class="radio-label">Finalizadas</span>
-      </label>
-    </div>
-  </div>
-
-  <div class="grade-quadros">
+    <header>
+      <a href="index.html">
+        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+      </a>
+      <nav>
+        <a href="index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i> Serviços</a>
+        <a href="#"><i class="fas fa-envelope"></i> Contato</a>
+      </nav>
+    </header>
+    <section class="quadros-wrapper">
+      <h1>Conheça as Nossas Principais Obras</h1>
+      <hr class="stardart-line" width="60%">
+      <!-- Radio Button para filtro de obras concluidas ou não-->
+      <!--Implementar filtro no back-end  -->
+      <div class="filtro-quadros">
+        <div>
+          <label>
+            <input type="radio" name="filtro-obra" checked=""/>
+            <span class="radio-label">Geral</span>
+          </label>
+          <label>
+            <input type="radio" name="filtro-obra" />
+            <span class="radio-label">Em andamento</span>
+          </label>
+          <label>
+            <input type="radio" name="filtro-obra" />
+            <span class="radio-label">Finalizadas</span>
+          </label>
+        </div>
+      </div>
+      
+      <div class="grade-quadros">
     <div class="card-obras">
       <div class="imagem-bg-obra" style="background-image: url('../img/instalcao-spda.jpeg')"></div>
       <div class="info-quadros">
         <a href="#">
           <span class="titulo-quadro-obra">Teste nome da obra </span>
         </a>
-
+        
         <p class="desc-quadro-obra">Teste da descrição da obra</p>
-
+        
         <a class="action" href="#">
           Veja mais
           <span aria-hidden="true"> → </span>
