--- a/public/views/saiba-mais.html
+++ b/public/views/saiba-mais.html
@@ -45,7 +45,9 @@
               historia
             </strong>
           </p>
-          <button class="btn-obras-info">Conheça as nossas obras</button>
+          <a href="obras-model.html">
+            <button class="btn-obras-info">Conheça as nossas obras</button>
+          </a>
         </div>
       </div>
 
@@ -65,7 +67,7 @@
           <div class="detail-img-cos">
             <img src="../img/img-perfil-teste.png" alt="Imagem Oliveira" />
             <h3>Oliveira Aparecido</h3>
-            <p class="p-detail-cos">
+            <p class="p-detail-cos">  
               Texto falando um pouco sobre cada um, com nome e idade
             </p>
           </div>
