addd: hr adicionado ao form

--- a/public/views/contato-eletroge.html
+++ b/public/views/contato-eletroge.html
@@ -29,6 +29,7 @@
       <!--container do formulário-->~
       <div class="div-form-container">
         <h2>ENTRE EM CONTATO CONOSCO!</h2>
+        <hr>
         <!--criação do formulario-->
         <form action="" method="post">
           <!--Input do nome do cliente-->
@@ -66,7 +67,7 @@
               placeholder="Digite a sua mensagem..."
             ></textarea>
           </div>
-          <!--Input -->
+          <!--Button para envio do email-->
           <div class="input-container">
             <button
               class="button-contact-us"
