--- a/public/style.css
+++ b/public/style.css
@@ -868,7 +868,7 @@ img {
   align-items: center;  /* <== adiciona aqui */
   margin: auto;
   width: 50rem;
-  height: 40rem;
+  height: 42rem;
   border: solid 0.1px #000;
   border-radius: 1rem;
   background-color: #fff;
@@ -878,7 +878,15 @@ img {
     color: #111827;
     padding-top: 2rem;
   }
+  & > hr{
+    margin-top: auto;
+    width: 80%;
+    border: solid .1px #333;
+    margin-top: 3rem;
+    height: 0px;
+  }
   & > form {
+    margin-top: -50px;
     display: flex;
     flex-direction: column;
     margin: auto;
